# tree-sitter-mojo

./: Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: fuzz.yml
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterMojo/: mojo.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
