[package]
name = "tree-sitter-mojo"
description = "Mojo grammar for tree-sitter"
version = "0.1.0"
authors = [
	"Max Brunsfeld <maxbrunsfeld@gmail.com>",
	"Douglas Creager <dcreager@dcreager.net>",
  "Jonathan Milligan <git@jonathansm.dev>"
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "python", "mojo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/realprogrammersusevim/tree-sitter-mojo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0"
